Check for postgresql.tls.certCAFilename
Check if the postgresql.tls.certCAFilename is set. Do not check the pgpool value to be able to use both seperately.

--- a/bitnami/postgresql-ha/templates/postgresql/statefulset.yaml
+++ b/bitnami/postgresql-ha/templates/postgresql/statefulset.yaml
@@ -247,7 +247,7 @@ spec:
               value: {{ template "postgresql-ha.postgresql.tlsCert" . }}
             - name: POSTGRESQL_TLS_KEY_FILE
               value: {{ template "postgresql-ha.postgresql.tlsCertKey" . }}
-            {{- if .Values.pgpool.tls.certCAFilename }}
+            {{- if .Values.postgresql.tls.certCAFilename }}
             - name: POSTGRESQL_TLS_CA_FILE
               value: {{ template "postgresql-ha.postgresql.tlsCACert" . }}
             {{- end }}
